Spark Integration: Added Spark to DefaultStore and other fixes for Standalone dist